# fast-rest-client

./: CMakeLists.txt  README.md  format.sh
examples/: benchmark.cpp  simple.cpp
include/fastrest/: fastrest.hpp
test/: test.cpp
